# djblogger-local

./: pyproject.toml
djblogger/: manage.py  pyproject.toml
djblogger/blog/: models.py  urls.py  views.py
djblogger/blog/migrations/: 0001_initial.py
djblogger/djblogger/: urls.py
djblogger/djblogger/settings/: base.py  settings.py
djblogger/djblogger/templates/base/: base.html  navbar.html
djblogger/djblogger/templates/blog/: index.html
