[tool.poetry]
name = "djblogger-local"
version = "0.1.0"
description = ""
authors = ["John Laffey <laffeychem@gmail.com>"]
readme = "README.md"
packages = [{include = "djblogger_local"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
