[tool.poetry]
name = "djblogger"
version = "0.1.0"
description = "Project to learn some dynamic web app stuff with django"
authors = ["John Laffey <laffeychem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
